Fix personal notes issues #98 and #96

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -198,7 +198,7 @@
         </div>
 
         <div id="PersonalNoteTextContainer">
-            <textarea id="PersonalNoteText"></textarea><br />
+            <textarea id="PersonalNoteText" maxlength="255"></textarea><br />
             <div id="PersonalNotesButtonsContainer" class="">
                 <button type="button" class="btn btn-primary btn-lg disabled" value="modify">Modify</button>
                 <button type="button" class="btn btn-success btn-lg" value="add">Add</button>
