Index Title by Project Title.

--- a/WhiteBears/Views/Project/Index.cshtml
+++ b/WhiteBears/Views/Project/Index.cshtml
@@ -13,7 +13,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title - Project Page</title>
+    <title>@ViewBag.Title - @Model.Project.Title</title>
     @Styles.Render("~/bundles/style/projectpage")
     <link rel="shortcut icon" href="~/Content/icon.ico" />
 
